--- a/.luarc.json
+++ b/.luarc.json
@@ -2,6 +2,9 @@
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
     "Lua.diagnostics.globals": [
         "vim",
-        "event"
+        "event",
+        "require",
+        "os",
+        "pcall"
     ]
 }
