--- a/.luarc.json
+++ b/.luarc.json
@@ -7,5 +7,88 @@
         "os",
         "pcall",
         "print"
+    ],
+    "workspace.library": [
+        "/Users/anhknowunity/.local/share/nvim/lazy/neodev.nvim/types/stable",
+        "/opt/homebrew/Cellar/neovim/0.8.3/share/nvim/runtime/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/telescope-undo.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/tokyonight.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/mason.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/telescope-fzf-native.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-tree.lua/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/mason-lspconfig.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-lsp-file-operations/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/mason-null-ls.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-treesitter-context/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/copilot.vim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-treesitter-textobjects/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/vim-illuminate/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/goto-preview/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/lspsaga.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/lspkind.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/which-key.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-dap/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/plenary.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-ts-rainbow/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/bufferline.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-dap-ui/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-autopairs/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-bqf/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/harpoon/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-dap-virtual-text/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/Comment.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/neovim-session-manager/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/lsp-fastaction.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-ts-context-commentstring/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/gitsigns.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/marks.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-web-devicons/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/diffview.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/substitute.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/todo-comments.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-colorizer.lua/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/null-ls.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/surround.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/close-buffers.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-cmp/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/lualine.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/gopher.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-lspconfig/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/overseer.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/mason-nvim-dap.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-notify/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-dap-go/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/dial.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/neoconf.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/neotest/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/flutter-tools.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/cmp-path/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-treesitter/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/nvim-tmux-navigation/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/zen-mode.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/lazy.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/fidget.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/cmp_luasnip/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/neotest-dart/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/telescope-recent-files/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/cmp-buffer/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/cmp-nvim-lsp/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/cmp-cmdline/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/schemastore.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/telescope.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/cmp-nvim-lua/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/indent-blankline.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/undotree/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/lsp_signature.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/LazyVim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/neodev.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/LuaSnip/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/toggleterm.nvim/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/vim-startuptime/lua",
+        "/Users/anhknowunity/.local/share/nvim/lazy/neoconf.nvim/types",
+        "/Users/anhknowunity/.local/share/nvim/lazy/neoconf.nvim/types/lua",
+        "/Users/anhknowunity/.config/nvim/lua",
+        "${3rd}/luv/library",
+        "${3rd}/luassert/library"
     ]
 }
